Change the picture upload to base64
